only load copy to clipboard when on posts

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -90,6 +90,23 @@
       {% render_xtdcomment_tree for post allow_thread allow_flagging allow_feedback show_feedback %}
     </section>
   {% endif %}
+
+  <script>
+    function copyToClipboard() {
+      const vanity_url = document.querySelector("#vanity");
+      const value = vanity_url.textContent;
+
+      const textarea = document.createElement("textarea");
+      textarea.value = "{{ request.get_host }}/p/" + value;
+      document.body.appendChild(textarea);
+      textarea.select();
+      document.execCommand("copy");
+      document.body.removeChild(textarea);
+    }
+
+    const button = document.querySelector("#vanity_button");
+    button.addEventListener("click", copyToClipboard);
+  </script>
 {% endblock content_main %}
 
 {% block pagination %}{% endblock pagination %}
