Fix in featured menu featured objects were linked incorrectly

--- a/khoBlog/templates/tailwind/menu_sections_mobile.html
+++ b/khoBlog/templates/tailwind/menu_sections_mobile.html
@@ -48,6 +48,7 @@
             Featured
           </p>
           <ul role="list" aria-labelledby="mobile-featured-heading-1" class="mt-6 space-y-6">
+            {% featured_page_list %}
             {% featured_post_list %}
           </ul>
         </div>
