--- a/lyrics/templates/lyrics/song_detail.html
+++ b/lyrics/templates/lyrics/song_detail.html
@@ -49,7 +49,7 @@
           {{ song.lyrics|apply_markup:"markdown"|apply_markup:"widont" }}
         </div>
         <div class="border-t border-jumbo-100 dark:border-jumbo-700 pt-5">
-          <a class="hover:underline" href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
+          <a class="hover:underline" href="{{ song.url_to_media }}" target="_blank" rel="noopener noreferrer">Find <span class="font-extrabold">{{ song.artist.first }} - {{ song }}</span>{% if not song.host == other %} on {{ song.get_host_display }}{% endif %}</a>
         </div>
       </div>
   </article>
