--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -144,16 +144,16 @@
     .aside-section {
         @apply mt-5 grid grid-cols-1 gap-1 rounded-2xl;
 
-        & div {
-            @apply rounded-[4px];
-        }
+        & .aside-content-child {
+            @apply rounded-[4px] px-4 py-5 bg-cornflower-100 dark:bg-jumbo-700 shadow overflow-hidden sm:p-6;
 
-        & div:first-of-type {
-            @apply rounded-t-2xl;
-        }
+            &:first-of-type {
+                @apply rounded-t-2xl;
+            }
 
-        & div:last-of-type {
-            @apply rounded-b-2xl;
+            &:last-of-type {
+                @apply rounded-b-2xl;
+            }
         }
     }
 
