--- a/lyrics/templates/lyrics/song_detail.html
+++ b/lyrics/templates/lyrics/song_detail.html
@@ -44,7 +44,7 @@
         {% sb song user=request.user %}
       </div>
       <div class="py-3 xl:pt-6 xl:pb-0">
-        <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+        <div class="prose prose_base">
           {% load markup_tags %}
           {{ song.lyrics|apply_markup:"markdown"|apply_markup:"widont" }}
         </div>
