--- a/quotes/templates/quotes/specific_detail.html
+++ b/quotes/templates/quotes/specific_detail.html
@@ -5,7 +5,7 @@
   <a class="hover:underline" href="{% url 'pages:quotes' %}">Go back to quotes list</a>
   <div class="text-3xl">{{ description }}</div>
 
-  <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+  <div class="prose prose_base">
     {% display_quotes object|to_class_name object.slug %}
   </div>
 {% endblock content_main %}
