--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -157,6 +157,10 @@
         }
     }
 
+    .prose_base {
+        @apply dark:prose-invert prose-sm md:prose-base lg:prose-lg xl:prose-xl 2xl:prose-2xl;
+    }
+
     .prose {
         & .tabbed-set {
             @apply relative flex flex-wrap;
