Updated Reqs Pages and Projects are wider

--- a/pages/templates/pages/default.html
+++ b/pages/templates/pages/default.html
@@ -13,7 +13,7 @@
 
 {% block content %}
   <article class="lg:grid lg:grid-cols-3">
-    <div class="lg:col-span-2 lg:pr-8">
+    <div class="col-span-full">
       <div class="md:flex md:items-center md:justify-between md:space-x-4 lg:border-b lg:border-gray-200 dark:lg:border-jumbo-700 lg:pb-6">
         <div>
           <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ page.title }}</span>
