--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -3,7 +3,7 @@
 
 {% block content %}
   <article class="xl:grid xl:grid-cols-3">
-    <div class="xl:col-span-2 xl:pr-8">
+    <div class="col-span-full">
       <section class="md:flex md:items-center md:justify-between md:space-x-4 xl:border-b xl:border-gray-200 dark:xl:border-jumbo-700 xl:pb-6">
         <div>
           <span class="text-2xl font-bold text-gray-900 dark:text-jumbo-50">{{ project.title }}</span>
@@ -13,7 +13,8 @@
         </div>
         {% sb project user=request.user %}
       </section>
-      <section class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
+      <section class="prose prose_base">
+        <h1>{{ project.title }}</h1>
         {% if project.learned %}
           <div>
             <span class="text-xl font-medium">Had to learn:</span>
