Superbuttons warning and danger

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -398,6 +398,14 @@
         &.active {
             @apply bg-cornflower-500 text-cornflower-100 hover:bg-cornflower-600 hover:text-cornflower-50;
         }
+
+        &.warning {
+            @apply bg-amber-500 dark:bg-amber-600 text-amber-100 dark:text-amber-200 hover:bg-amber-400 hover:text-amber-50 dark:hover:bg-amber-800 dark:hover:text-amber-200;
+        }
+
+        &.danger {
+            @apply bg-flamingo-500 dark:bg-flamingo-600 text-flamingo-100 dark:text-flamingo-200 hover:bg-flamingo-400 hover:text-flamingo-50 dark:hover:bg-flamingo-800 dark:hover:text-flamingo-200;
+        }
     }
 
     .dropdown_item_container {
