--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -74,13 +74,13 @@
               {% endif %}
               {% if object.get_absolute_update_url and object.get_absolute_admin_update_url %}
                 <div class="dropdown_item_container" role="none">
-                  <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+                  <a class="dropdown_item warning" href="{{ object.get_absolute_admin_update_url }}">
                     Edit in Admin
                   </a>
                 </div>
               {% endif %}
               <div class="dropdown_item_container" role="none">
-                <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item">Delete</a>
+                <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item danger">Delete</a>
               </div>
             </div>
           </span>
