--- a/khoBlog/templates/tailwind/user_auth_button.html
+++ b/khoBlog/templates/tailwind/user_auth_button.html
@@ -17,7 +17,7 @@
 
       {% if object.is_superuser %}
         <div class="dropdown_item_container" role="none">
-          <a href="{{ object.get_absolute_toggle_secure_mode_status_url }}" class="theme_option w-full flex dropdown_item" >Secure Mode Status</a>
+          <a href="{{ object.get_absolute_toggle_secure_mode_status_url }}" class="theme_option w-full flex dropdown_item warning" >Secure Mode Status</a>
         </div>
       {% endif %}
     {% else %}
