--- a/khoBlog/templates/tailwind/user_super_buttons.html
+++ b/khoBlog/templates/tailwind/user_super_buttons.html
@@ -22,8 +22,8 @@
           {% if object.is_superuser %}
             <div class="dropdown_item_container" role="none">
               {% if object.is_superuser %}
-                <a class="dropdown_item" href="{{ object.get_absolute_toggle_secure_mode_status_url }}">Secure Mode Status</a>
-                <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+                <a class="dropdown_item warning" href="{{ object.get_absolute_toggle_secure_mode_status_url }}">Secure Mode Status</a>
+                <a class="dropdown_item warning" href="{{ object.get_absolute_admin_update_url }}">
                   Edit in Admin
                 </a>
               {% endif %}
