added page_with_aside template for pages

--- a/pages/templates/pages/default_with_aside.html
+++ b/pages/templates/pages/default_with_aside.html
@@ -1,19 +1,9 @@
 {% extends 'tailwind/base.html' %}
 {% load comments comments_xtd super_buttons evaluate %}
 
-{% block page_head %}
-  {% if page.page_head %}
-    {% autoescape off %}
-      {{ page.page_head }}
-    {% endautoescape %}
-  {% endif %}
-
-  {{ block.super }}
-{% endblock page_head %}
-
 {% block content %}
   <article class="lg:grid lg:grid-cols-3">
-    <div class="col-span-full">
+    <div class="lg:col-span-2 lg:pr-8 lg:border-r lg:border-gray-200 dark:lg:border-jumbo-700">
       <div class="md:flex md:items-center md:justify-between md:space-x-4 lg:border-b lg:border-gray-200 dark:lg:border-jumbo-700 lg:pb-6">
         <div>
           <span class="text-2xl font-bold text-gray-950 dark:text-jumbo-50">{{ page.title }}</span>
@@ -30,8 +20,15 @@
           {% endautoescape %}
         </div>
       </div>
+      <aside class="mt-8 lg:hidden">
+        {% include 'pages/page_aside.html' %}
+      </aside>
     </div>
+    <aside class="hidden lg:block lg:pl-8">
+      {% include 'pages/page_aside.html' %}
+    </aside>
   </article>
+
   {% if not comments_disabled_globally_flag and page.enable_comments %}
     <div id="comments" class="mb-4 text-lg font-semibold text-gray-950 dark:text-jumbo-100 mt-12 border-t-2 border-gray-200 dark:border-jumbo-200">Comments</div>
     {% render_comment_form for page %}
