archive lists have links to previous and next

--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -1,4 +1,7 @@
 {% load cards content_type super_buttons heroicons %}
+{% if archive %}
+  {% include 'tailwind/archive_buttons.html' %}
+{% endif %}
 
 <section{% if filter_form %} x-data="{ open: false }" aria-labelledby="filter-heading"{% endif %} class="relative divide-y-2 divide-gray-300 dark:divide-jumbo-600">
   <section>
